--- a/.github/workflows/delivery.yml
+++ b/.github/workflows/delivery.yml
@@ -2,10 +2,10 @@ name: Push & PR CI
 on:
   push:
     branches:
-      - master
+      - main
   pull_request:
     branches:
-      - master
+      - main
 jobs:
   build:
     name: Linting on CI Server
