--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "react-dom": "^19.1.0",
     "react-helmet": "^6.1.0",
     "react-helmet-async": "^2.0.5",
-    "react-router-dom": "^7.6.2",
+    "react-router-dom": "6",
     "styled-components": "^6.1.18",
     "uuid": "^11.1.0"
   },
